# ray-tracing

./: .gitignore  Cargo.toml  LICENSE  README.md  image.ppm
examples/: cornell-box.toml
images/: bouncing-spheres.ppm  checkered-spheres.ppm
src/: aabb.rs  bvh.rs  camera.rs  color.rs  config.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  utils.rs  vec3.rs
src/core/: camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  mod.rs  onb.rs  pdf.rs  ray.rs  utils.rs  vec3.rs  vecmath.rs
src/materials/: checkerboard.rs  dialectric.rs  glossy.rs  image.rs  isotropic.rs  lambertian.rs  lights.rs  material.rs  metal.rs  mod.rs
src/radiometry/: color.rs  mod.rs  sampling.rs  spectrum.rs  utils.rs
src/shape/: cylinder.rs  mod.rs  quadrilateral.rs  sphere.rs
src/textures/: checkerboard.rs  mod.rs  noise.rs  texture.rs
src/volume/: aabb.rs  bvh.rs  constant_medium.rs  mod.rs
