[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"


[alias]
rr = "run --release"
br = "build --release"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
dyn-clone = "1.0.17"
rand = "0.8.5"
exr = "1.7"
rayon = "1.7"
indicatif = { version = "*", features = ["rayon"] }
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
